test/error/ast/ArrayIndexOutOfRange.mod
MODULE ArrayIndexOutOfRange;
VAR a: ARRAY 5 OF INTEGER;
BEGIN
  a[5];
END ArrayIndexOutOfRange.
